# LearningEffectiveModernCpp

./: .gitignore  CMakeLists.txt  README.md
hase/decltype/: a.cpp
scripts/: run_hase_decltype.sh  run_item.sh  run_item02_auto.sh
src/: item01_template_type_deduction.cpp  item02_auto_type_deduction.cpp  item03_decltype.cpp  item04_view_deduced_types.cpp  item06_explicitly_typed_initializer.cpp  main.cpp  main_macos.mm  main_windows.cpp
