cmake_minimum_required(VERSION 3.20)
project(HelloWindow LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(WIN32)
  add_executable(HelloWindow WIN32 src/main.cpp src/main_windows.cpp)
  target_compile_definitions(HelloWindow PRIVATE UNICODE _UNICODE)
elseif(APPLE)
  enable_language(OBJCXX)
  set(CMAKE_OBJCXX_STANDARD 20)
  set(CMAKE_OBJCXX_STANDARD_REQUIRED ON)

  add_executable(HelloWindow src/main.cpp src/main_macos.mm)
  find_library(COCOA_FRAMEWORK Cocoa REQUIRED)
  target_link_libraries(HelloWindow PRIVATE ${COCOA_FRAMEWORK})
else()
  message(FATAL_ERROR "This sample supports only Windows and macOS.")
endif()
