cmake_minimum_required(VERSION 3.20)
project(HelloWindow LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

file(GLOB ITEM_SOURCES CONFIGURE_DEPENDS src/item[0-9][0-9]_*.cpp)

foreach(ITEM_SOURCE IN LISTS ITEM_SOURCES)
  get_filename_component(ITEM_FILENAME "${ITEM_SOURCE}" NAME_WE)
  string(REGEX MATCH "^item([0-9][0-9])_" _ "${ITEM_FILENAME}")
  set(ITEM_NUMBER "${CMAKE_MATCH_1}")
  add_executable(Item${ITEM_NUMBER} "${ITEM_SOURCE}")
  if(MSVC)
    target_compile_options(Item${ITEM_NUMBER} PRIVATE /utf-8)
  endif()
endforeach()

if(WIN32)
  add_executable(HelloWindow WIN32 src/main.cpp src/main_windows.cpp)
  target_compile_definitions(HelloWindow PRIVATE UNICODE _UNICODE)
  if(MSVC)
    target_compile_options(HelloWindow PRIVATE /utf-8)
  endif()
elseif(APPLE)
  enable_language(OBJCXX)
  set(CMAKE_OBJCXX_STANDARD 20)
  set(CMAKE_OBJCXX_STANDARD_REQUIRED ON)

  add_executable(HelloWindow src/main.cpp src/main_macos.mm)
  find_library(COCOA_FRAMEWORK Cocoa REQUIRED)
  target_link_libraries(HelloWindow PRIVATE ${COCOA_FRAMEWORK})
else()
  message(FATAL_ERROR "This sample supports only Windows and macOS.")
endif()
